test fix sticky header on ios

--- a/src/styles/customizeMDE.scss
+++ b/src/styles/customizeMDE.scss
@@ -82,11 +82,15 @@
 
    .mde-text,
    .mde-preview {
-      font-size: 1.1rem;
+      font-size: 19px;
       padding: 10px;
 
+      @media screen and (max-width: 768px) {
+         font-size: 17px;
+      }
+
       @media screen and (max-width: 480px) {
-         font-size: 1rem;
+         font-size: 16px;
          padding: 5px !important;
       }
    }
